Sun Oct 22 10:08:31 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Makefile.bor:
          Update file names for the ACE_ components.

Sun Oct 22 08:57:33 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/test_config.h: implemented these changes to remove
          g++ warnings introduced by:

          Thu Oct 19 13:17:41 2000  Darrell Brunsch <brunsch@uci.edu>

          1) Moved ace_file_stream typedef to end of file.
          2) Moved inline definition of ACE_Test_Output::output_file ()
             to before first use.
          3) Removed static qualifier from ACE_ALPHABET.

Sat Oct 21 12:52:58 2000  Carlos O'Ryan  <coryan@uci.edu>

        * Makefile*:
          Update dependencies.

Fri Oct 20 20:46:37 2000  Steve Huston  <shuston@riverace.com>

        * ace/OS.i (chdir): Added !defined (AIX) to the !defined (ACE_WIN32)
          && defined (<Visual Age C++>) to get it to build clean on AIX.

        * ace/ace-dll.icc: Added Base_Thread_Adapter, Thread_Adapter,
          Flag_Manip, Handle_Ops, Init_ACE, Lib_Find, Sock_Connect,
          OS_Log_Msg_Attributes, Malloc_Allocator, PI_Malloc,
          Thread_Exit, Log_Msg_IPC, OS_Thread_Adapter, Log_Msg_Backend,
          Thread_Control (h and cpp).

        * ace/Handle_Ops.cpp:
        * ace/PI_Malloc.cpp: Corrected ACE_RCSID args.

Fri Oct 20 16:38:55 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/ace_dll.dsp:
        * ace/ace_lib.dsp:
          Update MSVC projects

Fri Oct 20 16:23:40 2000  Priyanka Gontla  <pgontla@ece.uci.edu>

        * ace/ACE.h:
          Modified to include the renamed files.

Fri Oct 20 14:13:43 2000  Priyanka Gontla  <pgontla@ece.uci.edu>

        * ace/Sock_Connect.i:
        * ace/Sock_Connect.h:
        * ace/Sock_Connect.cpp:

        * ace/Lib_Find.i:
        * ace/Lib_Find.h:
        * ace/Lib_Find.cpp:

        * ace/Init_ACE.i:
        * ace/Init_ACE.h:
        * ace/Init_ACE.cpp:

        * ace/Handle_Ops.i:
        * ace/Handle_Ops.h: