@@ -1,3 +1,9 @@
+Sun Oct 22 17:11:16 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ace/Malloc_T.h: Added a default value of sizeof (T) to the
+	  malloc() method of class ACE_Cached_Allocator.  Thanks to
+	  for reporting this.
+
 Sun Oct 22 10:08:31 2000  Carlos O'Ryan  <coryan@uci.edu>
 
         * ace/Makefile.bor:
